Split client as separate project and switched to Resteasy. Added special handling for failed compilation.